@@ -15,9 +15,10 @@ FROM docker.io/eclipse-temurin:23-jre-alpine
 LABEL maintainer="https://github.com/PBH-BTN/PeerBanHelper"
 USER 0
 ENV TZ=UTC
-ENV JAVA_OPTS="-Xmx512M -XX:+UseZGC -XX:+ZGenerational -XX:+ShrinkHeapInSteps"
+ENV JAVA_OPTS="-Xmx512M -Xss512k -XX:+UseG1GC -XX:+UseStringDeduplication -XX:+ShrinkHeapInSteps"
 WORKDIR /app
 VOLUME /tmp
+COPY --from=build build/target/libraries /app/libraries
 COPY --from=build build/target/PeerBanHelper.jar /app/PeerBanHelper.jar
 ENV PATH="${JAVA_HOME}/bin:${PATH}"
-ENTRYPOINT ${JAVA_HOME}/bin/java ${JAVA_OPTS} -jar PeerBanHelper.jar
+ENTRYPOINT ${JAVA_HOME}/bin/java ${JAVA_OPTS} -cp /app/libraries/* com.ghostchu.peerbanhelper.MainJumpLoader
